# theia

./: .gitattributes  .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
assets/: cone.stl  cube.ply  cube.stl  sphere.stl  suzanne.stl  torus.stl
docs/: README.md  index.md  installation.md  model.md  polarization.md  requirements.txt  scene.md
docs/api/: camera.md  cascades.md  index.md  light.md  lookup.md  material.md  random.md  response.md  scene.md  target.md  trace.md  units.md
docs/pipeline/: components.md  extend.md  index.md  interfaces.md  pipeline.md
examples/: 01_volume_tracing.ipynb  02_scene_tracing.ipynb  03_multiple_lightsources.ipynb
notebooks/: 01_volume_tracing.ipynb  02_scene_tracing.ipynb  PROPOSAL.ipynb  scene_render.ipynb  track_angular_dist_fit.ipynb
src/theia/: __init__.py  __init__.pyi  camera.py  cascades.py  estimator.py  items.py  light.py  lookup.py  material.py  queue.py  random.py  response.py  scene.py  scheduler.py  target.py  task.py  testing.py  trace.py  tracer.py  units.py  util.py
tests/: conftest.py  test_camera.py  test_cascades.py  test_emptyscenetracer.py  test_estimator.py  test_light.py  test_lookup.py  test_material.py  test_math.py  test_philox.py  test_polarization.py  test_random.py  test_ray.py  test_response.py  test_scatter.py  test_scene.py  test_scenetracer.py  test_sphere.py  test_target.py  test_target_guide.py  test_task.py  test_trace.py  test_trace_energy.py  test_trace_enery.py  test_wavefront.py
tests/common/: items.py  models.py  queue.py
tests/data/: bk7_refractive_index.csv  (+5 more)
(+183 files in other folders)
