[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "theia"
version = "0.1.0"
description = "Transient Ray Tracing Framework on the GPU"
authors = [
    { name = "Tobias Kerscher", email = "88444139+tkerscher@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "hephaistos",
    "jsonschema~=4.23",
    "numpy>=1.22",
    "scipy>=1.8",
    "trimesh[easy]~=4.5.3"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"theia.shader" = ["*.glsl"]
"theia.data" = ["*.*"]

[project.optional-dependencies]
test = [
    "black>=23.0.0",
    "mypy>=1.5.0",
    "pytest>=7.4.0"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
pythonpath = [
    "src"
]
testpaths = "tests"
tmp_path_retention_count = "1"
tmp_path_retention_policy = "failed"
